MDEV-6667 : Improved handling of wsrep-new-cluster option

Code refactoring. Using mysql option handling system to
handle 'wsrep-new-cluster' option.